--- a/.github/workflows/build-qbittorent-windows.yml
+++ b/.github/workflows/build-qbittorent-windows.yml
@@ -258,4 +258,4 @@ set(VCPKG_BUILD_TYPE release)
 
             For more detailed changes, please refer to the commit history.
           draft: false
-          prerelease: false  # Always full release
+          prerelease: false
