--- a/.github/workflows/build-qbittorent-windows.yml
+++ b/.github/workflows/build-qbittorent-windows.yml
@@ -5,7 +5,8 @@ name: Build and Release qBittorrent Installer
 
 on:
   push:
-  workflow_dispatch:
+    tags:
+      - 'v*' # to trigger on tag names that start with v, to start on any tag use - '*'
 
 permissions:
   contents: write
@@ -223,14 +224,11 @@ jobs:
         id: vars
         run: |
           if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
-            echo "release_tag=${GITHUB_REF#refs/tags/}" >> "$GITHUB_OUTPUT"
-            echo "is_tag=true" >> "$GITHUB_OUTPUT"
-          else
-            refname="${GITHUB_REF#refs/heads/}"
-            refname="${refname#refs/pull/}"
-            echo "release_tag=${refname}-run-${GITHUB_RUN_ID}" >> "$GITHUB_OUTPUT"
-            echo "is_tag=false" >> "$GITHUB_OUTPUT"
-          fi
+  echo "release_tag=${GITHUB_REF#refs/tags/}" >> "$GITHUB_OUTPUT"
+else
+  echo "::error::This workflow must be triggered by a tag push to create a provenance badge."
+  exit 1
+fi
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2.1.0
