--- a/.github/workflows/build-qbittorent-windows.yml
+++ b/.github/workflows/build-qbittorent-windows.yml
@@ -1,4 +1,4 @@
-# (modified for provenance verification)
+# (modified for asset attestation)
 # qBittorrent yml for release (based on ci-windows.yml and the libtorrent version it was built upon is reflected in the exe name):
 
 name: Build and Release qBittorrent Installer
@@ -253,4 +253,4 @@ jobs:
             For more detailed changes, please refer to the commit history.
           draft: false
           prerelease: false
-          generate_release_provenance: true
+          attestation: true
