--- a/.github/workflows/build-qbittorent-windows.yml
+++ b/.github/workflows/build-qbittorent-windows.yml
@@ -184,7 +184,7 @@ jobs:
           }
 
       - name: Upload all build assets for release
-        uses: actions/upload-artifact@v4 # using v4 automatically uses the latest action version of 4 (not 5 if there will be 5) which currently is v4.1.4
+        uses: actions/upload-artifact@v4.1.4
         with:
           name: qBittorrent-Build-Assets-libt-${{ matrix.libt_version }}
           path: |
