--- a/.github/workflows/build-qbittorent-windows.yml
+++ b/.github/workflows/build-qbittorent-windows.yml
@@ -184,7 +184,7 @@ jobs:
           }
 
       - name: Upload all build assets for release
-        uses: actions/upload-artifact@v4.3.1
+        uses: actions/upload-artifact@a721fa3c7f2e8ae6d22ea0d2c4f6de504cda9d9e
         with:
           name: qBittorrent-Build-Assets-libt-${{ matrix.libt_version }}
           path: |
